--- a/traveler/src/main/resources/application.yml
+++ b/traveler/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_mobile
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/mobile_db
     username: root
-    password: B300102
+    password: 123456
   jpa:
     generate-ddl: true
     show-sql: true
